<resources>
    <string name="app_name">QuizApp3</string>
    <string name="main">Main</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount:   </string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">start</string>
    <string name="all">All</string>
    <string name="ten">10</string>

    <string-array name="difficulty_array">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>