<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_illustrator"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_illustrator">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_questions_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/questions_amount"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_questions_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ten" />
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="1"
            android:value="10"
            android:valueTo="20"
            app:labelBehavior="gone"
            app:thumbColor="@color/purple"
            app:thumbElevation="0dp"
            app:thumbStrokeColor="@color/light_grey"
            app:thumbStrokeWidth="2dp"
            app:tickVisible="false"
            app:trackColorActive="@color/purple"
            app:trackColorInactive="@color/spinner_track_color"
            app:trackHeight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/category"
            android:textColor="@color/dark_grey" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginTop="6dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="@dimen/cardview_compat_inset_shadow">

            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="0dp"
                android:backgroundTint="@color/neutral_grey" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/difficulty"
            android:textColor="@color/dark_grey" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_marginTop="6dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="@dimen/cardview_compat_inset_shadow">

            <Spinner
                android:id="@+id/sp_difficulty"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:overScrollMode="never"
                android:backgroundTint="@color/neutral_grey" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:backgroundTint="#6979F8"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/start"
            app:cornerRadius="6dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>